--- a/about.html
+++ b/about.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Clean Blog - Start Bootstrap Theme</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>About</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-
   </head>
-
   <body>
-
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="about.html">About</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -42,7 +30,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
+              <a class="nav-link" href="post.html">All Posts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -51,79 +39,47 @@
         </div>
       </div>
     </nav>
-
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/about-background3.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <span class="subheading"></span>
             </div>
           </div>
         </div>
       </div>
     </header>
-
-    <!-- Main Content -->
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+          <div>
+            <img style="border: solid 2px; height:50%; width:50%; float:left; margin-right: 5%;" src="img/tracy.png" alt="Italian Trulli">
+            <p>Wellness coaching initially evolved out of need to help my children who were suffering with ADD and eczema.  Conventional methods were not helping them, so I began searching for answers on my own.  Through trial and error, I found the Chek Institute in 2013 and began taking courses in Holistic Lifestyle Coaching.   What began as a way to find some answers for my family has since turned into a passion for overall health and wellness.  I discovered that nutrition was a great start, but how you truly take care of your body through proper movement, hydration, relaxation, beneficial thoughts and sleep are very powerful tools for true health and longevity.</p>
+          </div>
+          <div>
+            <p>Because I knew this journey wasn’t complete I began taking a few classes with Dr. Guy Voyer and am now in the process of becoming a Soma Trainer. Soma (body) Training has taken Wellness Coaching to a new level and it has enabled me to help people relieve back pain, gain strength and teach individuals to learn how to take care of their own bodies.</p>
+            <p>I am constantly learning in an effort to truly help people become the best version of themselves and feel good so they can remain active for as long as possible.</p>
+          </div>
         </div>
       </div>
     </div>
-
     <hr>
-
-    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <div class="clearfix">
+              <a class="btn btn-primary float-right" href="contact.html">Contact</a>
+            </div>
           </div>
         </div>
       </div>
     </footer>
-
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
-
   </body>
-
 </html>
