removed contact page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
             <li class="nav-item">
               <a class="nav-link" href="post.html">All Posts</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -70,5 +67,6 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/clean-blog.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/homeUrl.js"></script>
   </body>
 </html>
