--- a/about.html
+++ b/about.html
@@ -32,9 +32,6 @@
             <li class="nav-item">
               <a class="nav-link" href="post.html">All Posts</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -81,5 +78,6 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/clean-blog.min.js"></script>
+    <script src="js/aboutUrl.js"></script>
   </body>
 </html>
